FIX: add spacing between ul's in footer, appropriate text-color in success stories' section

--- a/framework.css
+++ b/framework.css
@@ -305,7 +305,7 @@
 }
 
 .justify-end {
-  align-content: flex-end;
+  justify-content: flex-end;
 }
 
 /* Bacgrounds */
